--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <br>
             <p class="lead mx-auto">By leveraging AI techonology and optimized workflow systems, we write denial appeals and provide hospitals with early identification of denial risk.</p>
             <br>
-            <a class="btn btn-lg btn-success" href="mailto:dylanmacalinao@gmail.com">CONTACT US</a>
+            <a class="btn btn-lg btn-success" href="mailto:SorakaHealth@gmail.com">CONTACT US</a>
           </div>
 
           <div class="col-12 col-lg-6 offset-lg-1 img-outside-right hidden-md-down">
@@ -393,7 +393,7 @@
             <h3 class="fw-900 mb-20">Let's work together.</h3>
             <p class="lead text-muted">How can we help your hospital manage its insurance claim denials?</p>
             <br>
-            <a class="btn btn-lg btn-round btn-success" href="mailto:dylanmacalinao@gmail.com">Contact Us</a>
+            <a class="btn btn-lg btn-round btn-success" href="mailto:SorakaHealth@gmail.com">Contact Us</a>
           </div>
         </div>
 
